security/networkpolicy/network-policy-answer.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: http-go-v1-policy 
spec:
  policyTypes:
  - Egress
  - Ingress
  podSelector:
    matchLabels:
      app: http-go-v1 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: http-go-v2 
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: http-go-v2-policy
spec:
  policyTypes:
  - Egress
  - Ingress
  podSelector:
    matchLabels:
      app: http-go-v2
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: http-go-v3
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: http-go-v1
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: http-go-v3-policy
spec:
  policyTypes:
  - Egress
  - Ingress
  podSelector:
    matchLabels:
      app: http-go-v3
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: http-go-v2
